--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -778,22 +778,22 @@
     UAR_cn_ADJ:0 "Arab"
     UAR_an_ADJ:0 "Arab"
 
-    PER_ni:0 "Qajar Empire"
-    PER_ni_DEF:0 "The Qajar Empire"
+    PER_ni:0 "The United Ummah of Persia"
+    PER_ni_DEF:0 "The United Ummah of Persia"
     PER_ds:0 "United Ummah of Persia"
     PER_ds_DEF:0 "The United Ummah of Persia"
-    PER_rc:0 "Qajar Empire"
-    PER_rc_DEF:0 "The Qajar Empire"
-    PER_an:0 "Qajar Empire "
-    PER_an_DEF:0 "The Qajar Empire"
-    PER_cn:0 "Qajar Empire"
-    PER_cn_DEF:0 "The Qajar Empire"
-    PER_lb:0 "Qajar Empire"
-    PER_lb_DEF:0 "The Qajar Empire"
-    PER_ss:0 "Qajar Empire"
-    PER_ss_DEF:0 "The Qajar Empire"
-    PER_jc:0 "Persian Directorate"
-    PER_jc_DEF:0 "The Persian Directorate"
+    PER_rc:0 "The United Ummah of Persia"
+    PER_rc_DEF:0 "The United Ummah of Persia"
+    PER_an:0 "The United Ummah of Persia "
+    PER_an_DEF:0 "The United Ummah of Persia"
+    PER_cn:0 "The United Ummah of Persia"
+    PER_cn_DEF:0 "The United Ummah of Persia"
+    PER_lb:0 "The United Ummah of Persia"
+    PER_lb_DEF:0 "The United Ummah of Persia"
+    PER_ss:0 "The United Ummah of Persia"
+    PER_ss_DEF:0 "The United Ummah of Persia"
+    PER_jc:0 "The United Ummah of Persia"
+    PER_jc_DEF:0 "The United Ummah of Persia"
     PER_ni_ADJ:0 "Persian"
     PER_rc_ADJ:0 "Persian"
     PER_lb_ADJ:0 "Persian"
@@ -2617,22 +2617,22 @@
     ALG_cn_ADJ:0 "Algerian"
     ALG_an_ADJ:0 "Algerian"
 
-    LBA_ni:0 "Cyrenica and Tripolitania"
-    LBA_ni_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_rc:0 "Cyrenica and Tripolitania"
-    LBA_rc_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_lb:0 "Cyrenica and Tripolitania"
-    LBA_lb_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_ss:0 "Cyrenica and Tripolitania"
-    LBA_ss_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_jc:0 "Cyrenica and Tripolitania"
-    LBA_jc_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_an:0 "Cyrenica and Tripolitania"
-    LBA_an_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_ds:0 "Cyrenica and Tripolitania"
-    LBA_ds_DEF:0 "the Union of Cyrenica and Tripolitania"
-    LBA_cn:0 "Cyrenica and Tripolitania"
-    LBA_cn_DEF:0 "the Union of Cyrenica and Tripolitania"
+    LBA_ni:0 "Mamluk Sultanate of Cyrenica"
+    LBA_ni_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_rc:0 "Mamluk Sultanate of Cyrenica"
+    LBA_rc_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_lb:0 "Mamluk Sultanate of Cyrenica"
+    LBA_lb_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_ss:0 "Mamluk Sultanate of Cyrenica"
+    LBA_ss_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_jc:0 "Mamluk Sultanate of Cyrenica"
+    LBA_jc_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_an:0 "Mamluk Sultanate of Cyrenica"
+    LBA_an_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_ds:0 "Mamluk Sultanate of Cyrenica"
+    LBA_ds_DEF:0 "The The State of the Cyrenican Mamluks"
+    LBA_cn:0 "Mamluk Sultanate of Cyrenica"
+    LBA_cn_DEF:0 "The The State of the Cyrenican Mamluks"
     LBA_ni_ADJ:0 "Libyan"
     LBA_rc_ADJ:0 "Libyan"
     LBA_lb_ADJ:0 "Libyan"
@@ -2977,22 +2977,22 @@
     PNG_DEF:0 "Papua"
     PNG_ADJ:0 "Papuan"
 
-    HEJ_ni:0 "Emirate of Hejaz"
-    HEJ_ni_DEF:0 "the Emirate of Hejaz"
-    HEJ_ds:0 "Emirate of Hejaz"
-    HEJ_ds_DEF:0 "the Emirate of Hejaz"
-    HEJ_rc:0 "Emirate of Hejaz"
-    HEJ_rc_DEF:0 "the Emirate of Hejaz"
-    HEJ_an:0 "Emirate of Hejaz "
-    HEJ_an_DEF:0 "the Emirate of Hejaz"
+    HEJ_ni:0 "Vilayet of Mecca"
+    HEJ_ni_DEF:0 "The Vilayet of Mecca"
+    HEJ_ds:0 "Vilayet of Mecca"
+    HEJ_ds_DEF:0 "The Vilayet of Mecca"
+    HEJ_rc:0 "Vilayet of Mecca"
+    HEJ_rc_DEF:0 "The Vilayet of Mecca"
+    HEJ_an:0 "Vilayet of Mecca "
+    HEJ_an_DEF:0 "The Vilayet of Mecca"
     HEJ_cn:0 "Vilayet of Mecca"
-    HEJ_cn_DEF:0 "the Vilayet of Mecca"
-    HEJ_lb:0 "Emirate of Hejaz"
-    HEJ_lb_DEF:0 "the Emirate of Hejaz"
-    HEJ_ss:0 "Emirate of Hejaz"
-    HEJ_ss_DEF:0 "the Emirate of Hejaz"
-    HEJ_jc:0 "People's State of Hejaz"
-    HEJ_jc_DEF:0 "the People's State of Hejaz"
+    HEJ_cn_DEF:0 "The Vilayet of Mecca"
+    HEJ_lb:0 "Vilayet of Mecca"
+    HEJ_lb_DEF:0 "The Vilayet of Mecca"
+    HEJ_ss:0 "Vilayet of Mecca"
+    HEJ_ss_DEF:0 "The Vilayet of Mecca"
+    HEJ_jc:0 "Vilayet of Mecca"
+    HEJ_jc_DEF:0 "The Vilayet of Mecca"
     HEJ_ni_ADJ:0 "Arab"
     HEJ_rc_ADJ:0 "Arab"
     HEJ_lb_ADJ:0 "Arab"
@@ -5419,22 +5419,22 @@
     ANG_cn_ADJ:0 "Lusitanian"
     ANG_an_ADJ:0 "Lusitanian"
 
-    MZB_ni:0 "Republic of Mozambique"
-    MZB_ni_DEF:0 "The Republic of Mozambique"
-    MZB_ds:0 "Republic of Mozambique"
-    MZB_ds_DEF:0 "The Republic of Mozambique"
-    MZB_rc:0 "Republic of Mozambique"
-    MZB_rc_DEF:0 "The Republic of Mozambique"
-    MZB_an:0 "Republic of Mozambique"
-    MZB_an_DEF:0 "The Republic of Mozambique"
+    MZB_ni:0 "Mozambique Stablisation Territory"
+    MZB_ni_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_ds:0 "Mozambique Stablisation Territory"
+    MZB_ds_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_rc:0 "Mozambique Stablisation Territory"
+    MZB_rc_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_an:0 "Mozambique Stablisation Territory"
+    MZB_an_DEF:0 "The Mozambique Stablisation Territory"
     MZB_cn:0 "Mozambique Stablisation Territory"
-    MZB_cn_DEF:0 "the Mozambique Stablisation Territory"
-    MZB_lb:0 "Republic of Mozambique"
-    MZB_lb_DEF:0 "The Republic of Mozambique"
-    MZB_ss:0 "Republic of Mozambique"
-    MZB_ss_DEF:0 "The Republic of Mozambique"
-    MZB_jc:0 "Republic of Mozambique"
-    MZB_jc_DEF:0 "The Republic of Mozambique"
+    MZB_cn_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_lb:0 "Mozambique Stablisation Territory"
+    MZB_lb_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_ss:0 "Mozambique Stablisation Territory"
+    MZB_ss_DEF:0 "The Mozambique Stablisation Territory"
+    MZB_jc:0 "Mozambique Stablisation Territory"
+    MZB_jc_DEF:0 "The Mozambique Stablisation Territory"
     MZB_ni_ADJ:0 "Mozambiqan"
     MZB_rc_ADJ:0 "Mozambiqan"
     MZB_lb_ADJ:0 "Mozambiqan"
@@ -7144,30 +7144,30 @@
     LEB_cn_ADJ:0 "Lebanese"
     LEB_an_ADJ:0 "Lebanese"
 
-    UAE_ni:0 "Trucial Sheikhdoms"
-    UAE_ni_DEF:0 "The Trucial Sheikhdoms"
-    UAE_ds:0 "Trucial Sheikhdoms"
-    UAE_ds_DEF:0 "The Trucial Sheikhdoms"
-    UAE_rc:0 "Trucial Sheikhdoms"
-    UAE_rc_DEF:0 "The Trucial Sheikhdoms"
-    UAE_an:0 "Trucial Sheikhdoms"
-    UAE_an_DEF:0 "The Trucial Sheikhdoms"
-    UAE_cn:0 "Trucial Sheikhdoms"
-    UAE_cn_DEF:0 "The Trucial Sheikhdoms"
-    UAE_lb:0 "Trucial Sheikhdoms"
-    UAE_lb_DEF:0 "The Trucial Sheikhdoms"
-    UAE_ss:0 "Trucial Sheikhdoms"
-    UAE_ss_DEF:0 "The Trucial Sheikhdoms"
-    UAE_jc:0 "Trucial Sheikhdoms"
-    UAE_jc_DEF:0 "The Trucial Sheikhdoms"
-    UAE_ni_ADJ:0 "Trucial"
-    UAE_rc_ADJ:0 "Trucial"
-    UAE_lb_ADJ:0 "Trucial"
-    UAE_ss_ADJ:0 "Trucial"
-    UAE_jc_ADJ:0 "Trucial"
-    UAE_ds_ADJ:0 "Trucial"
-    UAE_cn_ADJ:0 "Trucial"
-    UAE_an_ADJ:0 "Trucial"
+    UAE_ni:0 "Tripartite Management Zone"
+    UAE_ni_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_ds:0 "Tripartite Management Zone"
+    UAE_ds_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_rc:0 "Tripartite Management Zone"
+    UAE_rc_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_an:0 "Tripartite Management Zone"
+    UAE_an_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_cn:0 "Tripartite Management Zone"
+    UAE_cn_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_lb:0 "Tripartite Management Zone"
+    UAE_lb_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_ss:0 "Tripartite Management Zone"
+    UAE_ss_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_jc:0 "Tripartite Management Zone"
+    UAE_jc_DEF:0 "The Tripartite Extraction Management Zone"
+    UAE_ni_ADJ:0 "Tripartite"
+    UAE_rc_ADJ:0 "Tripartite"
+    UAE_lb_ADJ:0 "Tripartite"
+    UAE_ss_ADJ:0 "Tripartite"
+    UAE_jc_ADJ:0 "Tripartite"
+    UAE_ds_ADJ:0 "Tripartite"
+    UAE_cn_ADJ:0 "Tripartite"
+    UAE_an_ADJ:0 "Tripartite"
 
     KUW_ni:0 "Sheikhdom of Kuwait"
     KUW_ni_DEF:0 "The Sheikhdom of Kuwait"
@@ -7194,22 +7194,22 @@
     KUW_cn_ADJ:0 "Kuwaiti"
     KUW_an_ADJ:0 "Kuwaiti"
 
-    SAU_ni:0 "Kingdom of Arabia"
-    SAU_ni_DEF:0 "The Kingdom of Arabia"
-    SAU_ds:0 "Kingdom of Arabia"
-    SAU_ds_DEF:0 "The Kingdom of Arabia"
-    SAU_rc:0 "Kingdom of Arabia"
-    SAU_rc_DEF:0 "The Kingdom of Arabia"
-    SAU_an:0 "Kingdom of Arabia"
-    SAU_an_DEF:0 "The Kingdom of Arabia"
+    SAU_ni:0 "Emirate of Riyadh"
+    SAU_ni_DEF:0 "The Emirate of Riyadh"
+    SAU_ds:0 "Emirate of Riyadh"
+    SAU_ds_DEF:0 "The Emirate of Riyadh"
+    SAU_rc:0 "Emirate of Riyadh"
+    SAU_rc_DEF:0 "The Emirate of Riyadh"
+    SAU_an:0 "Emirate of Riyadh"
+    SAU_an_DEF:0 "The Emirate of Riyadh"
     SAU_cn:0 "Emirate of Riyadh"
     SAU_cn_DEF:0 "The Emirate of Riyadh"
-    SAU_lb:0 "Kingdom of Arabia"
-    SAU_lb_DEF:0 "The Kingdom of Arabia"
-    SAU_ss:0 "Kingdom of Arabia"
-    SAU_ss_DEF:0 "The Kingdom of Arabia"
-    SAU_jc:0 "Kingdom of Arabia"
-    SAU_jc_DEF:0 "The Kingdom of Arabia"
+    SAU_lb:0 "Emirate of Riyadh"
+    SAU_lb_DEF:0 "The Emirate of Riyadh"
+    SAU_ss:0 "Emirate of Riyadh"
+    SAU_ss_DEF:0 "The Emirate of Riyadh"
+    SAU_jc:0 "Emirate of Riyadh"
+    SAU_jc_DEF:0 "The Emirate of Riyadh"
     SAU_ni_ADJ:0 "Arab"
     SAU_rc_ADJ:0 "Arab"
     SAU_lb_ADJ:0 "Arab"
