bring back special ministry baby

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -6,12 +6,12 @@
 
 government_type:0 "Government Type"
 
-cabinet:0 "Cabinet"
-head_of_government:0 "Head of Government"
-economics_minister:0 "Economy Minister"
-foreign_minister:0 "Foreign Affairs Minister"
-internal_minister:0 "Interior Minister"
-#special_minister:0 "Special Interest Minister"
+cabinet: "Cabinet"
+head_of_government: "Head of Government"
+economics_minister: "Economy Minister"
+foreign_minister: "Foreign Affairs Minister"
+internal_minister: "Interior Minister"
+special_minister: "Special Interest Minister"
 
 national_identity:0 "National Identity"
 PB_NI_Liberty:0 "Liberty"
