--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -19,10 +19,11 @@ ss_acceptance: "£ai_acceptance_texticon Acceptance of State Socialist Diplomacy
 jc_acceptance: "£ai_acceptance_texticon Acceptance of Jacobin Diplomacy"
 an_acceptance: "£ai_acceptance_texticon Acceptance of Anarcho-Liberal Diplomacy"
 ### CHARACTERS ###
-head_of_government_cost_factor: "£political_advisor_cost_texticon  Head of Government Cost"
-economics_minister_cost_factor: "£political_advisor_cost_texticon  Economy Minister Cost"
-foreign_minister_cost_factor: "£political_advisor_cost_texticon  Foreign Affairs Minister Cost"
-internal_minister_cost_factor: "£political_advisor_cost_texticon  Interior Minister Cost"
+head_of_government_cost_factor: "£political_advisor_cost_texticon  $head_of_government$ Cost"
+economics_minister_cost_factor: "£political_advisor_cost_texticon  $economics_minister$ Cost"
+foreign_minister_cost_factor: "£political_advisor_cost_texticon  $foreign_minister$ Cost"
+internal_minister_cost_factor: "£political_advisor_cost_texticon  $internal_minister$ Cost"
+special_minister_cost_factor: "£political_advisor_cost_texticon  $special_minister$ Cost"
 
 ### BUILDINGS ###
 modifier_production_speed_farm_factor: "£GFX_industry_texticon §YAgroponics Complex§! construction speed"
