--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -452,7 +452,7 @@
  STATE_451: "Tobruk"
  STATE_452: "Marsa Matruh"
  STATE_453: "Sinai"
- STATE_454: "Palestine"
+ STATE_454: "Jerusalem"
  STATE_455: "Transjordan"
  STATE_456: "Aswan"
  STATE_457: "Eastern Desert"
@@ -668,7 +668,7 @@
  STATE_667: "Lesser Sunda Islands"
  STATE_668: "The Moluccas"
  STATE_669: "Northern Papua"
- STATE_670: "Laos"
+ STATE_670: "Luang Prabang"
  STATE_671: "Annam"
  STATE_672: "Palembang"
  STATE_673: "North Sulawesi"
@@ -739,7 +739,7 @@
  STATE_738: "Aru Islands"
  STATE_739: "Baranovich Island"
  STATE_740: "Victoria Island"
- STATE_741: "Cambodia"
+ STATE_741: "Phnom Penh"
  STATE_742: "Ferghana"
  STATE_743: "Qingdao"
  STATE_744: "Xian"
@@ -890,7 +890,7 @@
  STATE_889: "Zilverzee"
  STATE_890: "Oranje Desert"
  STATE_891: "Northport"
- STATE_892: "Freetown"
+ STATE_892: "Gadsden"
  STATE_893: "North Assinwati"
  STATE_894: "Northbasin"
  STATE_895: "East Oregon"
@@ -940,7 +940,7 @@
  STATE_939: "Cuzco"
  STATE_940: "Romande"
  STATE_941: "Kansas"
- STATE_942: "Marooner"
+ STATE_942: "Freetown"
  STATE_943: "Rainy River"
  STATE_944: "Norton"
  STATE_945: "Black Rock"
@@ -1308,7 +1308,7 @@
  STATE_1307: "Mahra"
  STATE_1308: "Khasab"
  STATE_1309: "Latakia"
- STATE_1310: "Gaza"
+ STATE_1310: "Negev"
  STATE_1311: "Tabuk"
  STATE_1312: "Deir ez-Zor"
  STATE_1313: "Wadai"
@@ -1401,3 +1401,23 @@
  STATE_1400: "Sumatera Barat"
  STATE_1401: "Bengkulu"
  STATE_1402: "Tarnopol"
+ STATE_1403: "Ticino"
+ STATE_1404: "Valais"
+ STATE_1405: "Limburg"
+ STATE_1406: "Angostura"
+ STATE_1407: "Mayana"
+ STATE_1408: "Goyuguk"
+ STATE_1409: "Clinton"
+ STATE_1410: "Marooneria"
+ STATE_1411: "Áni Ozó"
+ STATE_1412: "Sankt Bartolomeus"
+ STATE_1413: "Saurashtra"
+ STATE_1414: "Maguindanao"
+ STATE_1415: "Rayong"
+ STATE_1416: "Nakhon Ratchasima"
+ STATE_1417: "Siem Reap"
+ STATE_1418: "Champassak"
+ STATE_1419: "Khammouan"
+ STATE_1420: "Akka"
+ STATE_1421: "Dogger Island"
+ STATE_1422: "Bohuslän"
