--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -26,7 +26,7 @@
  STRATEGICREGION_25:0 "Greece"
  STRATEGICREGION_26:0 "Romania"
  STRATEGICREGION_27:0 "Hungary"
- STRATEGICREGION_28:0 "Middle East"
+ STRATEGICREGION_28:0 "Mesopotamia"
  STRATEGICREGION_29:0 "Central Mediterranean Sea"
  STRATEGICREGION_30:0 "Black Sea"
  STRATEGICREGION_31:2 "Deccan Plateau"
