--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -106,16 +106,15 @@
 #35 - BRABANT
  VICTORY_POINTS_3262: "Breda"
  VICTORY_POINTS_6496: "Eindhoven"
- VICTORY_POINTS_11562: "Maastricht"
 #36 - FRIESLAND
  VICTORY_POINTS_9335: "Groningen"
 #37 - SJAELLAND
  VICTORY_POINTS_6287: "Copenhagen"
 #38 - NORRLAND
- VICTORY_POINTS_130: "Sundsvall"
  VICTORY_POINTS_11091: "Gävle"
- VICTORY_POINTS_11040: "Huddiksvall"
  VICTORY_POINTS_9088: "Härnösand"
+ VICTORY_POINTS_11040: "Huddiksvall"
+ VICTORY_POINTS_130: "Sundsvall"
 #39 - SOUTH TYROL
  VICTORY_POINTS_9630: "Bozen"
  VICTORY_POINTS_9598: "Trient"
@@ -304,11 +303,11 @@
 #110 - OSTLANDET
  VICTORY_POINTS_6115: "Kristiania"
 #111 - UUSIMAA
- VICTORY_POINTS_11105: "Helsingfors"
- VICTORY_POINTS_9183: "Kouvola"
  VICTORY_POINTS_6009: "Borgå"
- VICTORY_POINTS_3061: "Kotka"
  VICTORY_POINTS_6186: "Fredrikshamn"
+ VICTORY_POINTS_11105: "Helsingfors"
+ VICTORY_POINTS_3061: "Kotka"
+ VICTORY_POINTS_9183: "Kouvola"
 #112 - LISBON
  VICTORY_POINTS_3798: "Coimbra"
  VICTORY_POINTS_11805: "Lisbon"
@@ -349,7 +348,7 @@
  VICTORY_POINTS_3463: "Exeter"
  VICTORY_POINTS_540: "Plymouth"
 #124 - GOTLAND
-VICTORY_POINTS_408: "Visby"
+ VICTORY_POINTS_408: "Visby"
 #125 - EAST ANGLIA
  VICTORY_POINTS_11253: "Cambridge"
  VICTORY_POINTS_11221: "Luton"
@@ -392,28 +391,27 @@ VICTORY_POINTS_408: "Visby"
 #137 - CRIMEA
  VICTORY_POINTS_3686: "Sevastopol"
  VICTORY_POINTS_6724: "Simferopol"
-#138 - SCANIA
- VICTORY_POINTS_9279: "Malmö"
- VICTORY_POINTS_11215: "Karlskrona"
+#138 - SKANELAND
  VICTORY_POINTS_6412: "Halmstad"
  VICTORY_POINTS_6345: "Helsingborg"
+ VICTORY_POINTS_11215: "Karlskrona"
  VICTORY_POINTS_11160: "Kristianstad"
+ VICTORY_POINTS_9279: "Malmö"
  VICTORY_POINTS_11376: "Ystad"
 #139 - SMÅLAND
- VICTORY_POINTS_299: "Kalmar"
  VICTORY_POINTS_211: "Borgholm"
- VICTORY_POINTS_242: "Växjö"
  VICTORY_POINTS_3229: "Döderhultsvik"
  VICTORY_POINTS_9329: "Jönköping"
+ VICTORY_POINTS_299: "Kalmar"
+ VICTORY_POINTS_242: "Växjö"
 #140 - VÄSTERGÖTLAND
  VICTORY_POINTS_383: "Göteborg"
- VICTORY_POINTS_6310: "Uddevalla"
  VICTORY_POINTS_3375: "Mariestad"
  VICTORY_POINTS_295: "Trollhättan"
 #141 - SVEALAND
+ VICTORY_POINTS_11082: "Nyköping"
  VICTORY_POINTS_6050: "Stockholm"
  VICTORY_POINTS_9149: "Uppsala"
- VICTORY_POINTS_11082: "Nyköping"
 #142 - VESTLANDET
  VICTORY_POINTS_9127: "Ålesund"
  VICTORY_POINTS_122: "Bergen"
@@ -423,23 +421,21 @@ VICTORY_POINTS_408: "Visby"
 #144 - FINNMARK
  VICTORY_POINTS_11050: "Tromsø"
 #145 - ALAND
-VICTORY_POINTS_9228: "Mariehamn"
+ VICTORY_POINTS_9228: "Mariehamn"
 #146 - KARELIYA
+ VICTORY_POINTS_6082: "Lappstrand"
  VICTORY_POINTS_3187: "Serdovol"
  VICTORY_POINTS_9206: "Vyborg"
- VICTORY_POINTS_6082: "Lappstrand"
 #147 - BAY ISLANDS
 #148 - LAPPI
  VICTORY_POINTS_6045: "Kuusamo"
- VICTORY_POINTS_124: "Rovaniemi"
  VICTORY_POINTS_3026: "Pudasjärvi"
- VICTORY_POINTS_11125: "Torneå"
 #149 - POHJANMAA
- VICTORY_POINTS_11121: "Uleåborg"
- VICTORY_POINTS_3122: "Vasa"
+ VICTORY_POINTS_195: "Brahestad"
  VICTORY_POINTS_3172: "Jakobstad"
  VICTORY_POINTS_66: "Karleby"
- VICTORY_POINTS_195: "Brahestad"
+ VICTORY_POINTS_11121: "Uleåborg"
+ VICTORY_POINTS_3122: "Vasa"
 #150 - SAVO
  VICTORY_POINTS_9061: "Joensuu"
  VICTORY_POINTS_3125: "Kajana"
@@ -1902,9 +1898,9 @@ VICTORY_POINTS_9228: "Mariehamn"
  VICTORY_POINTS_7005: "Gabes"
  VICTORY_POINTS_12000: "Tataouine"
 #666 - NORRBOTTEN
+ VICTORY_POINTS_9147: "Happaranda"
  VICTORY_POINTS_6165: "Luleå"
  VICTORY_POINTS_9108: "Piteå"
- VICTORY_POINTS_9147: "Happaranda"
 #667 - LESSER SUNDA ISLANDS
  VICTORY_POINTS_4273: "Denpasar"
  VICTORY_POINTS_12162: "Bima"
@@ -1937,12 +1933,12 @@ VICTORY_POINTS_9228: "Mariehamn"
  VICTORY_POINTS_10153: "Manado"
  VICTORY_POINTS_12358: "Palu"
  VICTORY_POINTS_1589: "Sengkang"
-#674 - NIEUW FRIESLAND
+#674 - NYA SKANE
  VICTORY_POINTS_15429: "Carolaby"
- VICTORY_POINTS_15525: "Kopparfyndet"
- VICTORY_POINTS_15437: "Ökensbad"
- VICTORY_POINTS_15440: "Malmby"
  VICTORY_POINTS_15433: "Johansstad"
+ VICTORY_POINTS_15525: "Kopparfyndet"
+ VICTORY_POINTS_15440: "Malmby"
+ VICTORY_POINTS_15437: "Ökensbad"
 #675 - ROJAVA
  VICTORY_POINTS_1606: "Ar-Raqqa"
  VICTORY_POINTS_1549: "Heseke"
@@ -2185,16 +2181,16 @@ VICTORY_POINTS_9228: "Mariehamn"
 #788 - WALLONIE DU SUD
  VICTORY_POINTS_9418: "Bastogne"
 #789 - NYA GÖTALAND
-VICTORY_POINTS_13626: "Sydköping"
-VICTORY_POINTS_15431: "Nya Skärgården"
+ VICTORY_POINTS_15431: "Nya Skärgården"
+ VICTORY_POINTS_13626: "Sydköping"
 #790 - ACEH
  VICTORY_POINTS_7658: "Koetaradja"
-#791 - NEU-SCHLESIEN
+#791 - GUSTAVIA
  VICTORY_POINTS_12910: "Boltsholm"
- VICTORY_POINTS_15449: "Stranden"
- VICTORY_POINTS_13627: "Sankt Erik"
  VICTORY_POINTS_2205: "Bottenstad"
  VICTORY_POINTS_7567: "Gustafshamn"
+ VICTORY_POINTS_13627: "Sankt Erik"
+ VICTORY_POINTS_15449: "Stranden"
 #792 - WESTERN KALIMANTAN
  VICTORY_POINTS_1316: "Pontianak"
  VICTORY_POINTS_4279: "Singkawang"
@@ -2419,7 +2415,7 @@ VICTORY_POINTS_15431: "Nya Skärgården"
 #891 - NORTHPORT
  VICTORY_POINTS_7386: "Olympia"
  VICTORY_POINTS_7315: "Queens City"
-#892 - FREETOWN
+#892 - GADSDEN
  VICTORY_POINTS_10327: "Freetown"
  VICTORY_POINTS_10690: "Gadsdenville"
  VICTORY_POINTS_12673: "Liberty"
@@ -2529,7 +2525,7 @@ VICTORY_POINTS_15431: "Nya Skärgården"
  VICTORY_POINTS_1806: "New Charleston"
  VICTORY_POINTS_1534: "Robertstown"
  VICTORY_POINTS_7892: "Sunderling"
-#942 - MAROONER
+#942 - FREETOWN
  VICTORY_POINTS_1523: "Allenchurch"
  VICTORY_POINTS_1770: "Avonville"
  VICTORY_POINTS_4590: "Freetown"
@@ -2710,39 +2706,39 @@ VICTORY_POINTS_15431: "Nya Skärgården"
 #1014 - INNLANDET
  VICTORY_POINTS_3021: "Hamar"
 #1015 - OSTERGOTLAND
- VICTORY_POINTS_11380: "Norrköping"
  VICTORY_POINTS_9393: "Linköping"
+ VICTORY_POINTS_11380: "Norrköping"
 #1016 - VARMLAND
  VICTORY_POINTS_11114: "Karlstad"
  VICTORY_POINTS_6028: "Säffle"
 #1017 - VASTMANLAND
-VICTORY_POINTS_9209: "Örebro"
-VICTORY_POINTS_6164: "Karlskoga"
+ VICTORY_POINTS_6164: "Karlskoga"
+ VICTORY_POINTS_9209: "Örebro"
 #1018 - DALARNA
- VICTORY_POINTS_156: "Falun"
- VICTORY_POINTS_6147: "Mora"
  VICTORY_POINTS_6093: "Borlänge"
+ VICTORY_POINTS_6147: "Mora"
+ VICTORY_POINTS_156: "Falun"
 #1019 - JAMTLAND
+ VICTORY_POINTS_9066: "Åre"
  VICTORY_POINTS_46: "Östersund"
  VICTORY_POINTS_11148: "Strömsund"
- VICTORY_POINTS_9066: "Åre"
 #1020 - VÄSTERBOTTEN
-VICTORY_POINTS_6132: "Umeå"
-VICTORY_POINTS_9143: "Skellefteå"
+ VICTORY_POINTS_9143: "Skellefteå"
+ VICTORY_POINTS_6132: "Umeå"
 #1021 - TURKU
  VICTORY_POINTS_3083: "Åbo"
  VICTORY_POINTS_3117: "Björneborg"
  VICTORY_POINTS_9194: "Hangö"
  VICTORY_POINTS_169: "Raumo"
 #1022 - HAME
+ VICTORY_POINTS_15706: "Gustav Adolfs"
+ VICTORY_POINTS_11138: "Heinola"
  VICTORY_POINTS_9163: "Jyväskylä"
  VICTORY_POINTS_67: "Lahtis"
+ VICTORY_POINTS_15707: "Nyslott"
+ VICTORY_POINTS_3013: "Sankt Michel"
  VICTORY_POINTS_3137: "Tammerfors"
  VICTORY_POINTS_9167: "Tavastehus"
- VICTORY_POINTS_3013: "Sankt Michel"
- VICTORY_POINTS_15707: "Nyslott"
- VICTORY_POINTS_11138: "Heinola"
- VICTORY_POINTS_15706: "Gustav Adolfs"
 #1023 - LIGURIA
  VICTORY_POINTS_6788: "Genoa"
 #1024 - APULIA
@@ -3124,19 +3120,22 @@ VICTORY_POINTS_9143: "Skellefteå"
  VICTORY_POINTS_7627: "Agats"
 
 #1359 - PRINSLANDET
- VICTORY_POINTS_1773: "Solviken"
  VICTORY_POINTS_2155: "Grönaby"
+ VICTORY_POINTS_1773: "Solviken"
  VICTORY_POINTS_7811: "Svinbygden"
+#1362 - TORNEA
+ VICTORY_POINTS_124: "Rovaniemi"
+ VICTORY_POINTS_11125: "Torneå"
 #1363 - KEMI
-VICTORY_POINTS_2992: "Enare"
-VICTORY_POINTS_11204: "Kemiträsk"
+ VICTORY_POINTS_2992: "Enare"
+ VICTORY_POINTS_11204: "Kemiträsk"
 #1364 - MELLERSTA FINLAND
-VICTORY_POINTS_11210: "Äänekoski"
-VICTORY_POINTS_11144: "Saarijärvi"
+ VICTORY_POINTS_11210: "Äänekoski"
+ VICTORY_POINTS_11144: "Saarijärvi"
 #1366 - LAPPLAND
-VICTORY_POINTS_101: "Kiruna"
-VICTORY_POINTS_15650: "Döbelnstad"
-VICTORY_POINTS_11: "Storuman"
+ VICTORY_POINTS_15650: "Döbelnstad"
+ VICTORY_POINTS_101: "Kiruna"
+ VICTORY_POINTS_11: "Storuman"
 #1367 - BUENOS AIRES
  VICTORY_POINTS_12364: "Buenos Aires"
  VICTORY_POINTS_14546: "Morón"
@@ -3180,9 +3179,13 @@ VICTORY_POINTS_11: "Storuman"
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
 
-#1401- BENGKULU
+#1401 - BENGKULU
  VICTORY_POINTS_12138: "Bengkulu"
  VICTORY_POINTS_7308: "Mana"
+#1405 - LIMBURG
+ VICTORY_POINTS_11562: "Maastricht"
+#1422 - BOHUSLAN
+ VICTORY_POINTS_6310: "Uddevalla"
 
 
  VICTORY_POINTS_4801: "Urga"
@@ -4081,7 +4084,7 @@ VICTORY_POINTS_11: "Storuman"
  VICTORY_POINTS_1273:0 "Goa"
 
  VICTORY_POINTS_1751:0 "Azores"
- VICTORY_POINTS_2038:0 "Freetown"
+
  VICTORY_POINTS_2189:0 "Recherche"
  VICTORY_POINTS_2196:0 "Dar es Salaam"
  VICTORY_POINTS_5210:0 "Mombassa"
@@ -4148,7 +4151,7 @@ VICTORY_POINTS_11: "Storuman"
  VICTORY_POINTS_9195:0 "Kem"
  VICTORY_POINTS_11254:0 "Vyazma"
  VICTORY_POINTS_9201:0 "Apatity"
- VICTORY_POINTS_11125:0 "Torneå"
+
  VICTORY_POINTS_11204:0 "Kemiträsk"
  VICTORY_POINTS_6045:0 "Kuusamo"
  VICTORY_POINTS_3125:0 "Kajana"
@@ -4348,7 +4351,6 @@ VICTORY_POINTS_11: "Storuman"
  VICTORY_POINTS_575:0 "Dunkirk"
  VICTORY_POINTS_480:0 "Terneuzen"
  FRA_VICTORY_POINTS_480:0 "Village du Nez"
- VICTORY_POINTS_11562:0 "Maastricht"
  FRA_VICTORY_POINTS_11562:0 "Meuseges"
  VICTORY_POINTS_9403:0 "Enschede"
  FRA_VICTORY_POINTS_9403:0 "Frontièrebourg"
@@ -4543,7 +4545,7 @@ VICTORY_POINTS_11: "Storuman"
 
 
  VICTORY_POINTS_4908:0 "Guaymas"
- VICTORY_POINTS_4590:0 "Freetown"
+
  VICTORY_POINTS_1523:0 "Allenchurch"
  VICTORY_POINTS_12697:0 "Springfield" 
  VICTORY_POINTS_10457:0 "Winchester"
@@ -4580,7 +4582,6 @@ VICTORY_POINTS_11: "Storuman"
 
 
 
- VICTORY_POINTS_11562:0 "Maastricht"
  VICTORY_POINTS_9403:0 "Enschede"
  VICTORY_POINTS_9752:0 "Modena"
  VICTORY_POINTS_6790:0 "Parma"
