Haiti/Empire of Ayiti early skeleton content

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2417,30 +2417,30 @@
     ARU_cn_ADJ:0 "Patagonian"
     ARU_an_ADJ:0 "Patagonian"
 
-    HAI_ni:0 "Saint-Domingue"
-    HAI_ni_DEF:0 "the Republic of Saint-Domingue"
-    HAI_ds:0 "Saint-Domingue"
-    HAI_ds_DEF:0 "the Republic of Saint-Domingue"
-    HAI_rc:0 "Saint-Domingue"
-    HAI_rc_DEF:0 "the Republic of Saint-Domingue"
-    HAI_an:0 "Saint-Domingue"
-    HAI_an_DEF:0 "the Republic of Saint-Domingue"
-    HAI_cn:0 "Saint-Domingue"
-    HAI_cn_DEF:0 "the Republic of Saint-Domingue"
-    HAI_lb:0 "Saint-Domingue"
-    HAI_lb_DEF:0 "the Republic of Saint-Domingue"
-    HAI_ss:0 "Saint-Domingue"
-    HAI_ss_DEF:0 "the Republic of Saint-Domingue"
-    HAI_jc:0 "Saint-Domingue"
-    HAI_jc_DEF:0 "the Republic of Saint-Domingue"
-    HAI_ni_ADJ:0 "Afro-Creole"
-    HAI_rc_ADJ:0 "Afro-Creole"
-    HAI_lb_ADJ:0 "Afro-Creole"
-    HAI_ss_ADJ:0 "Afro-Creole"
-    HAI_jc_ADJ:0 "Afro-Creole"
-    HAI_ds_ADJ:0 "Afro-Creole"
-    HAI_cn_ADJ:0 "Afro-Creole"
-    HAI_an_ADJ:0 "Afro-Creole"
+    HAI_ni:0 "Empire of Ayiti"
+    HAI_ni_DEF:0 "the Empire of Ayiti"
+    HAI_ds:0 "Empire of Ayiti"
+    HAI_ds_DEF:0 "the Empire of Ayiti"
+    HAI_rc:0 "Empire of Ayiti"
+    HAI_rc_DEF:0 "the Empire of Ayiti"
+    HAI_an:0 "Empire of Ayiti"
+    HAI_an_DEF:0 "the Empire of Ayiti"
+    HAI_cn:0 "Empire of Ayiti"
+    HAI_cn_DEF:0 "the Empire of Ayiti"
+    HAI_lb:0 "Empire of Ayiti"
+    HAI_lb_DEF:0 "the Empire of Ayiti"
+    HAI_ss:0 "Empire of Ayiti"
+    HAI_ss_DEF:0 "the Empire of Ayiti"
+    HAI_jc:0 "Republic of Ayiti"
+    HAI_jc_DEF:0 "the Republic of Ayiti"
+    HAI_ni_ADJ:0 "Ayitian"
+    HAI_rc_ADJ:0 "Ayitian"
+    HAI_ds_ADJ:0 "Ayitian"
+    HAI_cn_ADJ:0 "Ayitian"
+    HAI_an_ADJ:0 "Ayitian"
+    HAI_lb_ADJ:0 "Ayitian"
+    HAI_ss_ADJ:0 "Ayitian"
+    HAI_jc_ADJ:0 "Ayitian"
 
     IRE_ni:0 "Irish Autonomous Provinces"
     IRE_ni_DEF:0 "the Irish Autonomous Provinces"
