doggerland my beloved 💓

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -5036,3 +5036,7 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   JAP_Occupied_Monarchy_ds_ADJ:0 "Japanese"
   JAP_Occupied_Monarchy_cn_ADJ:0 "Japanese"
   JAP_Occupied_Monarchy_an_ADJ:0 "Japanese"
+
+  DGG_AD_condominium: "Anglo-Dutch Doggerland"
+  DGG_AD_condominium_DEF: "the Anglo-Dutch Condominium of the Doggerland"
+  DGG_AD_condominium_ADJ: "Doggerlander"
