--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -57,7 +57,7 @@
  STRATEGICREGION_56:0 "Mid Atlantic"
  STRATEGICREGION_57:0 "Sargasso Sea"
  STRATEGICREGION_58:0 "Central Atlantic Gap"
- STRATEGICREGION_59:0 "Demerara Plain"
+ STRATEGICREGION_59:0 "Demerara Abyssal Plain"
  STRATEGICREGION_60:0 "West Indian Ocean"
  STRATEGICREGION_61:0 "Cap Verde Plain"
  STRATEGICREGION_62:0 "Gulf Of Guinea"
@@ -350,3 +350,5 @@
  STRATEGICREGION_348:0 "Scottish Sea"
  STRATEGICREGION_349:0 "Skagerrak"
  STRATEGICREGION_350:0 "White Sea"
+ STRATEGICREGION_351:0 "Guinea Basin"
+ STRATEGICREGION_352:0 "Brazilian Abyssal Plain"
